index update for footer

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon</title>
-    <meta name="description" content="SEO and Marketing for you since 2015!"
-    <meta name="keywords" content="SEO, marketing, social media, social, media, 
+    <meta name="description" content="SEO and Marketing for you since 2015!" >
+    <meta name="keywords" content="SEO, marketing, social media, social, media," >
 </head>
 
 <header>
@@ -75,12 +75,13 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+</section>
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
-</section>
+    </footer>
+
 
 </html>
