--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <header>
     <nav class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1>Horiseon</h1>
         <div>
             <ul>
                 <li>
