--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css"/>
     <title>Horiseon</title>
-    <meta name="description" content="SEO and Marketing for you since 2015!" >
-    <meta name="keywords" content="SEO, marketing, social media, social, media," >
+    <meta name="description" content="SEO and Marketing for you since 2015!">
+    <meta name="keywords" content="SEO, marketing, social media, social, media,">
 </head>
 
 <header>
     <nav class="header">
         <h1>Horiseon</h1>
-        <div>
-            <ul>
+            <div>
+                <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
@@ -23,7 +23,7 @@
                 <li>
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
-            </ul>
+                </ul>
         </div>
     </nav>
 </header>
