title name change

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Horiseon</title>
+    <title>Horiseon Social Solutions</title>
     <meta name="description" content="SEO and Marketing for you since 2015!">
     <meta name="keywords" content="SEO, marketing, social media, social, media,">
     <link rel="stylesheet" href="./assets/css/style.css"/>
